plugins {
	id 'org.springframework.boot' version '2.1.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'jacoco'
	id 'java'
	id 'maven-publish'
	id 'org.sonarqube' version '2.8'
}



group = 'com.covid19'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.projectlombok:lombok:1.18.24'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
//	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
	//compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	//annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.6.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'

}

//tasks.withType(JavaExec) {
//	jvmArgs += [
//			'--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
//	]
//}


test {
	useJUnitPlatform()
}

jacocoTestReport {
	reports {
		xml.enabled true
	}
}

sonarqube {
	properties {
		property 'sonar.host.url', 'https://sonarcloud.io'
		property 'sonar.organization', 'mpuertao'
		property 'sonar.projectKey', 'mpuertao_github-actions-demo'
	}
}

gradle.startParameter.refreshDependencies = true
